--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "universal-cookie": "^7.1.4"
   },
   "devDependencies": {
     "@types/node": "^20",
